# eosio_acc_check_plugin

./: CMakeLists.txt  README.md  acc_check_plugin.cpp
include/eosio/acc_check_plugin/: acc_check_plugin.hpp
